Add support for Ubuntu 20.04

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,6 +8,7 @@ galaxy_info:
       versions:
         - bionic
         - xenial
+        - focal
     - name: Debian
       versions:
         - buster
