--- a/tests/install.yml
+++ b/tests/install.yml
@@ -7,6 +7,7 @@
     test_profiles:
       - profile: debian-buster
       - profile: debian-stretch
+      - profile: ubuntu-focal
       - profile: ubuntu-bionic
       - profile: ubuntu-xenial
       - profile: centos-7
