--- a/tests/install.yml
+++ b/tests/install.yml
@@ -9,6 +9,7 @@
       - profile: debian-stretch
       - profile: ubuntu-bionic
       - profile: ubuntu-xenial
+      - profile: ubuntu-focal
       - profile: centos-7
     test_host_suffixes:
       - stable
